--- a/static/entrance.html
+++ b/static/entrance.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
         <title>채팅</title>
-        <link rel="stylesheet" href="/css/entrance.css">
+        <link rel="stylesheet" href="css/entrance.css">
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/index.js"></script>
     </head>
     <body>
-        <div id="main">
+        <div id="entrance">
             <input type="text" id="test">
             <button onclick="send()">전송</button>
         </div>
